--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ferhannah-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "ferhannah-cli 脚手架工具",
   "main": "index.js",
   "scripts": {
@@ -36,6 +36,8 @@
     "@types/figlet": "^1.7.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.10.7",
+    "@types/semver": "^7.5.8",
+    "axios": "^1.7.9",
     "chalk": "^5.4.1",
     "child_process": "^1.0.2",
     "commander": "^13.0.0",
@@ -46,6 +48,7 @@
     "rollup": "^4.30.1",
     "rollup-plugin-node-externals": "^8.0.0",
     "rollup-plugin-typescript2": "^0.36.0",
+    "semver": "^7.7.1",
     "simple-git": "^3.27.0",
     "tslib": "^2.8.1"
   },
